# media-server

./: .gitignore  Cargo.toml  README.md  Rocket.toml  example.env
migrations/2022-03-16-011554_media/: down.sql  up.sql
migrations/2022-03-20-043729_index_content_hash/: down.sql  up.sql
migrations/2022-03-24-033348_index_file_path/: down.sql  up.sql
migrations/2022-04-02-033739_remove_object_path/: down.sql  up.sql
migrations/2022-04-02-035038_remove_old_tables/: down.sql  up.sql
migrations/2022-04-18-030606_add_transition/: down.sql  up.sql
migrations/2022-04-18-033725_remove_old_tables/: down.sql  up.sql
migrations/2022-04-18-171025_add_quality/: down.sql  up.sql
migrations/2022-05-08-042905_add_blurhash/: down.sql  up.sql
src/: byte_content.rs  content_encoding.rs  content_type.rs  existing_file_handler.rs  file_content.rs  file_things.rs  find_object.rs  hash_file.rs  image_operations.rs  lib.rs  models.rs  object.rs  object_blur_hash.rs  object_image.rs  parsing.rs  schema.rs  server_name.rs  sqlite.rs  transformations.rs  virtual_object.rs
