[package]
name = "media_server"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Cendyne <cendyne@cendyne.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.1", features = ["json"]}
diesel = {version = "1.4.8", features = ["sqlite", "numeric", "r2d2"]}
dotenv = "0.15.0"
blake3 = "1.3.0"
ct-codecs = "1.1.1"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
either = "1.6.1"
phf = { version = "0.10.1", features = ["macros"] }
ouroboros = "0.15.0"
